--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     </head>
  
 <body>
-    <div class="main-parallax" id="home"></div>
+    <div class="splash-picture" id="home"></div>
     <div class="navbar">
             <a class="navigation" href="home">Home</a>
             <a class="navigation" href="Menu 1">Menu 1</a>
             <a class="navigation" href="Menu 2">Menu 2</a>
             <a class="navigation" href="Menu 3">Menu 3</a>
-            <a class="navigation" href="Menu 4">Menu 4</a>
     </div>
 </body>
 </html>
