--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
             <a class="navigation" href="Menu 2">Menu 2</a>
             <a class="navigation" href="Menu 3">Menu 3</a>
     </div>
+    <div class="main-body">Content Here</div>
 </body>
 </html>
