--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Project Harvold</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono');
+        </style>
     </head>
  
 <body>
