--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     </head>
  
 <body>
-    <div class="splash-picture" id="home"></div>
+    <div class="splash-picture" id="home">
+    <!--<img class="logo" src="Images/logo.png">-->
+    </div>
+    
     <div class="navbar">
             <a class="navigation" href="home">Home</a>
             <a class="navigation" href="Menu 1">Menu 1</a>
