--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  
 <body>
     <div class="splash-picture" id="home">
-    <!--<img class="logo" src="Images/logo.png">-->
+    <img class="logo" src="Images/logo.png">
     </div>
     
     <div class="navbar">
