--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <a class="navigation" href="Menu 2">Menu 2</a>
             <a class="navigation" href="Menu 3">Menu 3</a>
     </div>
-    <div class="main-body">Content Here</div>
+    <div class="main-body">
+        <!--<p class="info-section">Text-box 1</p>-->
+    </div>
 </body>
 </html>
