--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a class="navigation" href="Menu 3">Menu 3</a>
     </div>
     <div class="main-body">
-        <!--<p class="info-section">Text-box 1</p>-->
+        <p class="info-section">Text-box 1</p>
     </div>
 </body>
 </html>
