--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <a class="navigation" href="Menu 3">Menu 3</a>
     </div>
     <div class="main-body">
-        <p class="info-section">Text-box 1</p>
+        <p class="player-info">Text-box 1<br>More content<br>Player info and stuff<br>Box with and height are fixed atm</p>
+        <div class="map">Map goes here<br>This is a div not textbox</div>
+        <p class="party">Text box 2<br>Party is displayed here<br>Empty slots<br>width and height are fixed atm</p>
     </div>
 </body>
 </html>
