--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
         <style>
-            @import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono');
+            @import url('https://fonts.googleapis.com/css?family=Nova+Square');
         </style>
     </head>
  
@@ -16,10 +16,10 @@
     </div>
     
     <div class="navbar">
-            <a class="navigation" href="home">Home</a>
-            <a class="navigation" href="Menu 1">Menu 1</a>
-            <a class="navigation" href="Menu 2">Menu 2</a>
-            <a class="navigation" href="Menu 3">Menu 3</a>
+            <a class="navigation" href="home">home</a>
+            <a class="navigation" href="menu 1">menu 1</a>
+            <a class="navigation" href="menu 2">menu 2</a>
+            <a class="navigation" href="menu 3">menu 3</a>
     </div>
     <div class="main-body">
         <p class="player-info">Text-box 1<br>More content<br>Player info and stuff<br>Box with and height are fixed atm</p>
