--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     </div>
     
     <div class="navbar">
-            <a class="navigation" href="home">home</a>
-            <a class="navigation" href="menu 1">menu 1</a>
-            <a class="navigation" href="menu 2">menu 2</a>
-            <a class="navigation" href="menu 3">menu 3</a>
+        <a class="navigation" href="home">home</a>
+        <a class="navigation" href="trainer">profile</a>
+        <a class="navigation" href="explore">explore</a>
+        <a class="navigation" href="shop">battle</a>
+        <a class="navigation" href="forum">pokéstop</a>
+        <a class="navigation" href="more">more</a>
     </div>
     <div class="main-body">
         <p class="player-info">Text-box 1<br>More content<br>Player info and stuff<br>Box with and height are fixed atm</p>
