--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
     </div>
     
     <div class="navbar">
-        <a class="navigation" href="home">home</a>
+        <a class="navigation" href="home" style="border-left: none;">home</a>
         <a class="navigation" href="trainer">profile</a>
         <a class="navigation" href="explore">explore</a>
         <a class="navigation" href="shop">battle</a>
         <a class="navigation" href="forum">pokéstop</a>
-        <a class="navigation" href="more">more</a>
+        <a class="navigation" href="more" style="border-right: none;">more</a>
     </div>
     <div class="main-body">
         <p class="player-info">Text-box 1<br>More content<br>Player info and stuff<br>Box with and height are fixed atm</p>
-        <div class="map">Map goes here<br>This is a div not textbox</div>
+        <h1 class="map-name">Route 101</h1>
+        <img class="map" src="Images/map%20filler.png">
         <p class="party">Text box 2<br>Party is displayed here<br>Empty slots<br>width and height are fixed atm</p>
     </div>
 </body>
