--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <p class="info-header">Party</p>
         <h1 class="map-name">Route 101</h1>
             <img class="map" src="Images/map%20filler.png">
-        <p class="player-info">Text-box 1<br>More content<br>Player info and stuff<br>Box with and height are fixed atm</p>
+        <div class="player-info">Text-box 1<br>More content<br>Player info and stuff<br>Box with and height are fixed atm</div>
         <p class="info-header">Chat</p>
-        <p class="chat-box">Text box 2<br>Party is displayed here<br>Empty slots<br>width and height are fixed atm</p>
+        <div class="chat-box">Text box 2<br>Party is displayed here<br>Empty slots<br>width and height are fixed atm</div>
     </div>
 </body>
 </html>
