--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-    
+<html> <!--This is for PR testing-->    
     <head>
     <title>Project Harvold</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
