--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> <!--This is for PR testing-->    
+<html>   
     <head>
     <title>Project Harvold</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
