Refactored and updated homepage

--- a/front-end-resources/pages/gyms.html
+++ b/front-end-resources/pages/gyms.html
@@ -4,8 +4,8 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="./front-end-resources/shared-resources/main.css">
-    <link rel="icon" type="image/png" href="./front-end-resources/shared-resources/icon.png" sizes="16x16">
+    <link rel="stylesheet" type="text/css" href="../shared-resources/main.css">
+    <link rel="icon" type="image/png" href="../shared-resources/Icon.png" sizes="16x16">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     
@@ -18,7 +18,7 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     
-  <title>Gyms - PokÃ©mon Harvold</title>
+  <title>Gyms - Pokémon Harvold</title>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
   <div class="dropdown-content">
     <a href="#">My Profile</a>
     <a href="#">Box</a>
-    <a href="#">PokÃ©dex</a>
+    <a href="#">Pokédex</a>
     <a href="#">Settings</a>
     <a href="#">Log Out</a>
   </div>
@@ -49,16 +49,16 @@
 <div class="dropdown">
   <button class="dropbtn"><i class="fas fa-bullseye"></i> Battle</button>
   <div class="dropdown-content">
-    <a href="./resources/pages/gyms.html">Gyms</a>
-    <a href="./resources/pages/pvp-arena.html">PvP Arena</a>
-    <a href="./resources/pages/fight-pit.html">Fight Pit</a>
+    <a href="./gyms.html">Gyms</a>
+    <a href="./pvp-arena.html">PvP Arena</a>
+    <a href="./fight-pit.html">Fight Pit</a>
   </div>
 </div>
 <div class="dropdown">
-  <button class="dropbtn"><i class="fas fa-map-marker-alt"></i> PokÃ©stop</button>
+  <button class="dropbtn"><i class="fas fa-map-marker-alt"></i> Pokéstop</button>
   <div class="dropdown-content">
-    <a href="../PokÃ©stop/PokÃ©center.html">PokÃ©center</a>
-    <a href="#">PokÃ©mart</a>
+    <a href="../Pokéstop/Pokécenter.html">Pokécenter</a>
+    <a href="#">Pokémart</a>
     <a href="#">Trades</a>
     <a href="#">Rankings</a>
     <a href="#">Help</a>
@@ -67,7 +67,7 @@
 <div class="dropdown">
   <button class="dropbtn"><i class="fas fa-user-friends"></i> Social</button>
   <div class="dropdown-content">
-    <a href="#">Friends</a>
+    <a href="Gyms.html">Friends</a>
     <a href="#">Messages</a>
     <a href="#">Clan</a>
   </div>
@@ -98,13 +98,37 @@
 
 <div class="left-column" style="min-width: 855px">
     <div class="content" style="min-width: 835px">
-      <div class="header">Welcome to Pokemon Harvold!</div>
+      <div class="header">Gym Leaders</div>
       <br>
-      <p>Play Pokemon with your friends in our classic-style multi-player Pokemon game.</p>
+      <p>Test your skills against the eight Kanto gym leaders!</p>
       <br>
-      <p>Here, you will get the chance to catch Pokemon, play through a storyline, battle gym leaders, compete with friends, and more!</p>
+      <p>Once unlocked, a gym leader may be re-battled many times for experience. However, money will only be awarded for the first win of each day.</p>
       <br>
-      <p>Homepage content here</p>
+        <div class="row" style="margin-bottom: 1vh; min-width: 841.02px">
+            <div class="col-xs-3"></div>
+            <div class="col-xs-3"><a href=#><img src="../shared-resources/Brock.png" class="button"></a></div>
+            <div class="col-xs-2"><a href=#><img src="../shared-resources/Misty.png" class="button"></a></div>
+            <div class="col-xs-4"></div>
+        </div>
+        <div class="row" style="margin-bottom: 1vh; min-width: 841.02px">
+            <div class="col-xs-3"></div>
+            <div class="col-xs-3"><a href=#><img src="../shared-resources/Surge.png" class="button"></a></div>
+            <div class="col-xs-2"><a href=#><img src="../shared-resources/Erika.png" class="button"></a></div>
+            <div class="col-xs-4"></div>
+        </div>
+        <div class="row" style="margin-bottom: 1vh; min-width: 841.02px">
+            <div class="col-xs-3"></div>
+            <div class="col-xs-3"><a href=#><img src="../shared-resources/Koga.png" class="button"></a></div>
+            <div class="col-xs-2"><a href=#><img src="../shared-resources/Sabrina.png" class="button"></a></div>
+            <div class="col-xs-4"></div>
+        </div>
+        <div class="row" style="min-width: 841.02px">
+            <div class="col-xs-3"></div>
+            <div class="col-xs-3"><a href=#><img src="../shared-resources/Blaine.png" class="button"></a></div>
+            <div class="col-xs-2"><a href=#><img src="../shared-resources/Giovanni.png" class="button"></a></div>
+            <div class="col-xs-4"></div>
+        </div>
+
     </div>
 </div>
 
