Fixed gyms link

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 <div class="dropdown">
   <button class="dropbtn"><i class="fas fa-bullseye"></i> Battle</button>
   <div class="dropdown-content">
-    <a href="./resources/pages/gyms.html">Gyms</a>
-    <a href="./resources/pages/pvp-arena.html">PvP Arena</a>
-    <a href="./resources/pages/fight-pit.html">Fight Pit</a>
+    <a href="./front-end-resources/pages/gyms.html">Gyms</a>
+    <a href="./front-end-resources/pages/pvp-arena.html">PvP Arena</a>
+    <a href="./front-end-resources/pages/fight-pit.html">Fight Pit</a>
   </div>
 </div>
 <div class="dropdown">
