--- a/front-end-resources/pages/Gyms/gyms.html
+++ b/front-end-resources/pages/Gyms/gyms.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=PT Sans' rel='stylesheet'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./front-end-resources/shared-resources/main.css">
+    <link rel="stylesheet" type="text/css" href="../../shared-resources/main.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
 
@@ -32,7 +32,7 @@
                 <ul class="dropdown-menu">
                     <li><a href="#">Profile</a></li>
                     <li><a href="#">Box</a></li>
-                    <li><a href="#">PokÃ©dex</a></li>
+                    <li><a href="#">Pokédex</a></li>
                     <li><a href="#">Settings</a></li>
                 </ul>
             </li>
@@ -52,10 +52,10 @@
                 </ul>
             </li>
             <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-map-marker-alt"></i> PokÃ©stop</a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-map-marker-alt"></i> Pokéstop</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">PokÃ©center</a></li>
-                    <li><a href="#">PokÃ©mart</a></li>
+                    <li><a href="#">Pokécenter</a></li>
+                    <li><a href="#">Pokémart</a></li>
                     <li><a href="#">Trading Center</a></li>
                     <li><a href="#">Rankings</a></li>
                 </ul>
@@ -91,7 +91,7 @@
                 <ul class="dropdown-menu">
                     <li><a href="#">Profile</a></li>
                     <li><a href="#">Box</a></li>
-                    <li><a href="#">PokÃ©dex</a></li>
+                    <li><a href="#">Pokédex</a></li>
                     <li><a href="#">Settings</a></li>
                 </ul>
             </li>
@@ -111,10 +111,10 @@
                 </ul>
             </li>
             <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-map-marker-alt"></i> PokÃ©stop</a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-map-marker-alt"></i> Pokéstop</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">PokÃ©center</a></li>
-                    <li><a href="#">PokÃ©mart</a></li>
+                    <li><a href="#">Pokécenter</a></li>
+                    <li><a href="#">Pokémart</a></li>
                     <li><a href="#">Trading Center</a></li>
                     <li><a href="#">Rankings</a></li>
                 </ul>
@@ -130,6 +130,34 @@
     </ul>
   </div>
 </nav>
+    
+<div class="white-back">
+    <div class="container-fluid">
+        <div class="col-xs-0 col-sm-3 col-md-3 col-lg-3">
+            <div class="white-box">
+                <div class="header">Party</div>
+                <br>
+                <br>
+                <br>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
+            <div class="white-box centered">
+                <div class="header">Gyms</div>
+                <ul>
+                    <li><a href=#><img src="./Images/Brock.png" class="button"></a>
+                    <a href=#><img src="./Images/Misty.png" class="button"></a></li>
+                    <li><a href=#><img src="./Images/Surge.png" class="button"></a>
+                    <a href=#><img src="./Images/Erika.png" class="button"></a></li>
+                    <li><a href=#><img src="./Images/Koga.png" class="button"></a>
+                    <a href=#><img src="./Images/Sabrina.png" class="button"></a></li>
+                    <li><a href=#><img src="./Images/Blaine.png" class="button"></a>
+                    <a href=#><img src="./Images/Giovanni.png" class="button"></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 
 </div>
 
