--- a/index.html
+++ b/index.html
@@ -131,6 +131,48 @@
   </div>
 </nav>
 
+<div class="white-back">
+    <div class="container-fluid">
+        <div class="col-xs-0 col-sm-3 col-md-3 col-lg-3">
+            <div class="white-box">
+                <div class="header">Party</div>
+                <br>
+                <br>
+                <br>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
+            <div class="white-box">
+                <div class="header">Welcome to Pokémon Harvold</div>
+                <p>Play Pokémon with your friends in our classic-style multi-player Pokémon game.</p>
+                <p>Here, you will get the chance to catch Pokémon, play through a storyline, battle gym leaders, compete with friends, and more!</p>
+            </div>
+            <div class="white-box">
+                <div class="header">News and Updates</div>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Update</th>
+                            <th>Date</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Made this table</td>
+                            <td>2018-06-03</td>
+                        </tr>
+                        <tr>
+                            <td>Made this row</td>
+                            <td>2018-06-03</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 </div>
 
 <div class="col-xs-0 col-sm-0 col-md-1 col-lg-2">
