--- a/front-end-resources/pages/Gyms/gyms.html
+++ b/front-end-resources/pages/Gyms/gyms.html
@@ -16,7 +16,7 @@
 
 <body>
 
-<nav class="navbar nav-top navbar-inverse narrow">
+<nav class="navbar nav-top navbar-inverse navbar-fixed-top narrow">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
