--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./front-end-resources/shared-resources/main.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
+    <link rel="icon" type="image/png" href="front-end-resources/shared-resources/icon.png"/>
 </head>
 
 <body>
@@ -136,9 +138,80 @@
         <div class="col-xs-0 col-sm-3 col-md-3 col-lg-3">
             <div class="white-box">
                 <div class="header">Party</div>
-                <br>
-                <br>
-                <br>
+                <div class="party">
+                <ul>
+                    <li><a href="#" class="party-box">
+                        <div class="media party-info">
+                            <div class="media-left">
+                                <img src="http://www.pokestadium.com/assets/img/sprites/misc/icons/bulbasaur.png">
+                            </div>
+                            <div class="media-body">
+                                <p>Bulbasaur</p>
+                                <p>Level 5</p>
+                            </div>
+                        </div>
+                        <div class="health-bar">
+                            <div class="health" style="width: 85%; background-color: #9de0c2;">
+                            </div>
+                        </div>
+                        <img src="http://www.pokestadium.com/assets/img/sprites/official-art/bulbasaur.png" class="party-img">
+                    </a>
+                    <a href="#" class="party-box">
+                        <div class="media party-info">
+                            <div class="media-left">
+                                <img src="http://www.pokestadium.com/assets/img/sprites/misc/icons/charmander.png">
+                            </div>
+                            <div class="media-body">
+                                <p>Charmander</p>
+                                <p>Level 5</p>
+                            </div>
+                        </div>
+                        <div class="health-bar">
+                            <div class="health" style="width: 55%; background-color: #eef28a;">
+                            </div>
+                        </div>
+                        <img src="http://www.pokestadium.com/assets/img/sprites/official-art/charmander.png" class="party-img">
+                    </a>
+                    <a href="#" class="party-box">
+                        <div class="media party-info">
+                            <div class="media-left">
+                                <img src="http://www.pokestadium.com/assets/img/sprites/misc/icons/squirtle.png">
+                            </div>
+                            <div class="media-body">
+                                <p>Squirtle</p>
+                                <p>Level 5</p>
+                            </div>
+                        </div>
+                        <div class="health-bar">
+                            <div class="health" style="width: 25%; background-color: #e2583f;">
+                            </div>
+                        </div>
+                        <img src="http://www.pokestadium.com/assets/img/sprites/official-art/squirtle.png" class="party-img">
+                    </a></li>
+                    <li><a href="#" class="party-box" style="background-color: #e5c7df;">
+                        <div class="media party-info">
+                            <div class="media-left">
+                                <img src="http://www.pokestadium.com/assets/img/sprites/misc/icons/snorlax.png">
+                            </div>
+                            <div class="media-body">
+                                <p>Snorlax</p>
+                                <p>Level 30</p>
+                            </div>
+                        </div>
+                        <div class="health-bar">
+                            <div class="health" style="width: 1%; background-color: #e2583f;">
+                            </div>
+                        </div>
+                        <img src="http://www.pokestadium.com/assets/img/sprites/official-art/snorlax.png" class="party-img">
+                    </a>
+                    <a href="#" class="party-box" style="background-color: #dae3f2;">
+                        <h1>Empty</h1>
+                    </a>
+                    <a href="#" class="party-box" style="background-color: #dae3f2;">
+                        <h1>Empty</h1>
+                    </a></li>
+                </ul>
+                </div>
             </div>
         </div>
         <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
