--- a/index.html
+++ b/index.html
@@ -152,7 +152,11 @@
                             </div>
                         </div>
                         <div class="health-bar">
-                            <div class="health" style="width: 85%; background-color: #9de0c2;">
+                            <div class="health" style="width: 85%; background-color: #5ef29a;">
+                            </div>
+                        </div>
+                        <div class="exp-bar">
+                            <div class="exp" style="width: 99%; background-color: #2fc2eb;">
                             </div>
                         </div>
                         <img src="http://www.pokestadium.com/assets/img/sprites/official-art/bulbasaur.png" class="party-img">
@@ -168,7 +172,11 @@
                             </div>
                         </div>
                         <div class="health-bar">
-                            <div class="health" style="width: 55%; background-color: #eef28a;">
+                            <div class="health" style="width: 55%; background-color: #5ef29a;">
+                            </div>
+                        </div>
+                        <div class="exp-bar">
+                            <div class="exp" style="width: 15%; background-color: #2fc2eb;">
                             </div>
                         </div>
                         <img src="http://www.pokestadium.com/assets/img/sprites/official-art/charmander.png" class="party-img">
@@ -184,7 +192,11 @@
                             </div>
                         </div>
                         <div class="health-bar">
-                            <div class="health" style="width: 25%; background-color: #e2583f;">
+                            <div class="health" style="width: 25%; background-color: #f7e94a;">
+                            </div>
+                        </div>
+                        <div class="exp-bar">
+                            <div class="exp" style="width: 15%; background-color: #2fc2eb;">
                             </div>
                         </div>
                         <img src="http://www.pokestadium.com/assets/img/sprites/official-art/squirtle.png" class="party-img">
@@ -200,7 +212,11 @@
                             </div>
                         </div>
                         <div class="health-bar">
-                            <div class="health" style="width: 1%; background-color: #e2583f;">
+                            <div class="health" style="width: 1%; background-color: #e04b2d;">
+                            </div>
+                        </div>
+                        <div class="exp-bar">
+                            <div class="exp" style="width: 15%; background-color: #2fc2eb;">
                             </div>
                         </div>
                         <img src="http://www.pokestadium.com/assets/img/sprites/official-art/snorlax.png" class="party-img">
