--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-bullseye"></i> Battle</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Gym Leaders</a></li>
+                    <li><a href="./front-end-resources/pages/Gyms/gyms.html">Gym Leaders</a></li>
                     <li><a href="#">PvP Arena</a></li>
                     <li><a href="#">Raids Lobby</a></li>
                 </ul>
@@ -84,7 +84,7 @@
 
 <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8">
 
-<a href="#"><img src="https://i.imgur.com/aADijBZ.png" class= "img-responsive" id="logo"></a>
+<a href="./index.html"><img src="./front-end-resources/shared-resources/logo.png" class= "img-responsive" id="logo"></a>
 
 <nav class="navbar navbar-inverse nav-bot wide">
   <div class="container-fluid">
