Switched encoding to utf-8 to support accents

--- a/front-end-resources/pages/Gyms/gyms.html
+++ b/front-end-resources/pages/Gyms/gyms.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="../../shared-resources/formatting.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=PT Sans' rel='stylesheet'>
@@ -13,11 +14,12 @@
     <link rel="stylesheet" type="text/css" href="../../shared-resources/main.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
+    <link rel="icon" type="image/png" href="../../shared-resources/icon.png"/>
 </head>
 
 <body>
 
-<nav class="navbar nav-top navbar-inverse navbar-fixed-top narrow">
+<nav class="navbar nav-top navbar-inverse navbar-fixed-top narrow" data-role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -33,7 +35,7 @@
                 <ul class="dropdown-menu">
                     <li><a href="#">Profile</a></li>
                     <li><a href="#">Box</a></li>
-                    <li><a href="#">Pokédex</a></li>
+                    <li><a href="#">PokÃ©dex</a></li>
                     <li><a href="#">Settings</a></li>
                 </ul>
             </li>
@@ -53,10 +55,10 @@
                 </ul>
             </li>
             <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-map-marker-alt"></i> Pokéstop</a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-map-marker-alt"></i> PokÃ©stop</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Pokécenter</a></li>
-                    <li><a href="#">Pokémart</a></li>
+                    <li><a href="#">PokÃ©center</a></li>
+                    <li><a href="#">PokÃ©mart</a></li>
                     <li><a href="#">Trading Center</a></li>
                     <li><a href="#">Rankings</a></li>
                 </ul>
@@ -92,7 +94,7 @@
                 <ul class="dropdown-menu">
                     <li><a href="#">Profile</a></li>
                     <li><a href="#">Box</a></li>
-                    <li><a href="#">Pokédex</a></li>
+                    <li><a href="#">PokÃ©dex</a></li>
                     <li><a href="#">Settings</a></li>
                 </ul>
             </li>
@@ -112,10 +114,10 @@
                 </ul>
             </li>
             <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-map-marker-alt"></i> Pokéstop</a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-map-marker-alt"></i> PokÃ©stop</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Pokécenter</a></li>
-                    <li><a href="#">Pokémart</a></li>
+                    <li><a href="#">PokÃ©center</a></li>
+                    <li><a href="#">PokÃ©mart</a></li>
                     <li><a href="#">Trading Center</a></li>
                     <li><a href="#">Rankings</a></li>
                 </ul>
