--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
 <div class="container-fluid">
 
 <div class="col-xs-0 col-sm-0 col-md-1 col-lg-2">
-    <img src="front-end-resources/shared-resources/GrossBannerAd.png" width=150px style="margin-top: 120px;">
+    <img class="revenue" src="front-end-resources/shared-resources/GrossBannerAd.png" width=100% style="margin-top: 120px; max-width: 150px;">
 </div>
 
 <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8">
 
-<a href="./index.html"><img src="./front-end-resources/shared-resources/logo.png" class= "img-responsive" id="logo"></a>
+<a href="./index.html" id="logo-link"><img src="./front-end-resources/shared-resources/logo.png" class= "img-responsive" id="logo"></a>
 
 <nav class="navbar navbar-inverse nav-bot wide">
   <div class="container-fluid">
@@ -266,7 +266,7 @@
 </div>
 
 <div class="col-xs-0 col-sm-0 col-md-1 col-lg-2">
-    <img src="front-end-resources/shared-resources/GrossBannerAd.png" width=150px style="margin-top: 120px; float: right;">
+    <img class="revenue" src="front-end-resources/shared-resources/GrossBannerAd.png" width=100% style="margin-top: 120px; float: right; max-width: 150px;">
 </div>
 
 </div>
