--- a/index.html
+++ b/index.html
@@ -33,42 +33,42 @@
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-user-alt"></i> Trainer</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Profile</a></li>
-                    <li><a href="#">Box</a></li>
-                    <li><a href="#">Pokédex</a></li>
-                    <li><a href="#">Settings</a></li>
+                    <li><a class="top-menu" href="#">Profile</a></li>
+                    <li><a class="top-menu" href="#">Box</a></li>
+                    <li><a class="top-menu" href="#">Pokédex</a></li>
+                    <li><a class="top-menu" href="#">Settings</a></li>
                 </ul>
             </li>
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-globe"></i> Explore</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Last Map</a></li>
-                    <li><a href="#">World Map</a></li>
+                    <li><a class="top-menu" href="#">Last Map</a></li>
+                    <li><a class="top-menu" href="#">World Map</a></li>
                 </ul>
             </li>
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-bullseye"></i> Battle</a>
                 <ul class="dropdown-menu">
-                    <li><a href="./front-end-resources/pages/Gyms/gyms.html">Gym Leaders</a></li>
-                    <li><a href="#">PvP Arena</a></li>
-                    <li><a href="#">Raids Lobby</a></li>
+                    <li><a class="top-menu" href="./front-end-resources/pages/Gyms/gyms.html">Gym Leaders</a></li>
+                    <li><a class="top-menu" href="#">PvP Arena</a></li>
+                    <li><a class="top-menu" href="#">Raids Lobby</a></li>
                 </ul>
             </li>
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-map-marker-alt"></i> Pokéstop</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Pokécenter</a></li>
-                    <li><a href="#">Pokémart</a></li>
-                    <li><a href="#">Trading Center</a></li>
-                    <li><a href="#">Rankings</a></li>
+                    <li><a class="top-menu" href="#">Pokécenter</a></li>
+                    <li><a class="top-menu" href="#">Pokémart</a></li>
+                    <li><a class="top-menu" href="#">Trading Center</a></li>
+                    <li><a class="top-menu" href="#">Rankings</a></li>
                 </ul>
             </li>
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-user-friends"></i> Social</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Messages</a></li>
-                    <li><a href="#">Friends</a></li>
-                    <li><a href="#">Clan</a></li>
+                    <li><a class="top-menu" href="#">Messages</a></li>
+                    <li><a class="top-menu" href="#">Friends</a></li>
+                    <li><a class="top-menu" href="#">Clan</a></li>
                 </ul>
             </li>
     </ul>
@@ -80,11 +80,12 @@
 <div class="container-fluid">
 
 <div class="col-xs-0 col-sm-0 col-md-1 col-lg-2">
+    <img class="revenue" src="front-end-resources/shared-resources/GrossBannerAd.png" width=100% style="margin-top: 120px; max-width: 150px;">
 </div>
 
 <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8">
 
-<a href="./index.html"><img src="./front-end-resources/shared-resources/logo.png" class= "img-responsive" id="logo"></a>
+<a href="./index.html" id="logo-link"><img src="./front-end-resources/shared-resources/logo.png" class= "img-responsive" id="logo"></a>
 
 <nav class="navbar navbar-inverse nav-bot wide">
   <div class="container-fluid">
@@ -265,6 +266,7 @@
 </div>
 
 <div class="col-xs-0 col-sm-0 col-md-1 col-lg-2">
+    <img class="revenue" src="front-end-resources/shared-resources/GrossBannerAd.png" width=100% style="margin-top: 120px; float: right; max-width: 150px;">
 </div>
 
 </div>
