initial commit for map

--- a/front-end-resources/pages/Gyms/gyms.html
+++ b/front-end-resources/pages/Gyms/gyms.html
@@ -139,9 +139,96 @@
         <div class="col-xs-0 col-sm-3 col-md-3 col-lg-3">
             <div class="white-box">
                 <div class="header">Party</div>
-                <br>
-                <br>
-                <br>
+                <div class="party">
+                <ul>
+                    <li><a href="#" class="party-box">
+                        <div class="media party-info">
+                            <div class="media-left">
+                                <img src="http://www.pokestadium.com/assets/img/sprites/misc/icons/bulbasaur.png">
+                            </div>
+                            <div class="media-body">
+                                <p>Bulbasaur</p>
+                                <p>Level 5</p>
+                            </div>
+                        </div>
+                        <div class="health-bar">
+                            <div class="health" style="width: 85%; background-color: #5ef29a;">
+                            </div>
+                        </div>
+                        <div class="exp-bar">
+                            <div class="exp" style="width: 99%; background-color: #2fc2eb;">
+                            </div>
+                        </div>
+                        <img src="http://www.pokestadium.com/assets/img/sprites/official-art/bulbasaur.png" class="party-img">
+                    </a>
+                    <a href="#" class="party-box">
+                        <div class="media party-info">
+                            <div class="media-left">
+                                <img src="http://www.pokestadium.com/assets/img/sprites/misc/icons/charmander.png">
+                            </div>
+                            <div class="media-body">
+                                <p>Charmander</p>
+                                <p>Level 5</p>
+                            </div>
+                        </div>
+                        <div class="health-bar">
+                            <div class="health" style="width: 55%; background-color: #5ef29a;">
+                            </div>
+                        </div>
+                        <div class="exp-bar">
+                            <div class="exp" style="width: 15%; background-color: #2fc2eb;">
+                            </div>
+                        </div>
+                        <img src="http://www.pokestadium.com/assets/img/sprites/official-art/charmander.png" class="party-img">
+                    </a>
+                    <a href="#" class="party-box">
+                        <div class="media party-info">
+                            <div class="media-left">
+                                <img src="http://www.pokestadium.com/assets/img/sprites/misc/icons/squirtle.png">
+                            </div>
+                            <div class="media-body">
+                                <p>Squirtle</p>
+                                <p>Level 5</p>
+                            </div>
+                        </div>
+                        <div class="health-bar">
+                            <div class="health" style="width: 25%; background-color: #f7e94a;">
+                            </div>
+                        </div>
+                        <div class="exp-bar">
+                            <div class="exp" style="width: 15%; background-color: #2fc2eb;">
+                            </div>
+                        </div>
+                        <img src="http://www.pokestadium.com/assets/img/sprites/official-art/squirtle.png" class="party-img">
+                    </a></li>
+                    <li><a href="#" class="party-box" style="background-color: #e5c7df;">
+                        <div class="media party-info">
+                            <div class="media-left">
+                                <img src="http://www.pokestadium.com/assets/img/sprites/misc/icons/snorlax.png">
+                            </div>
+                            <div class="media-body">
+                                <p>Snorlax</p>
+                                <p>Level 30</p>
+                            </div>
+                        </div>
+                        <div class="health-bar">
+                            <div class="health" style="width: 1%; background-color: #e04b2d;">
+                            </div>
+                        </div>
+                        <div class="exp-bar">
+                            <div class="exp" style="width: 15%; background-color: #2fc2eb;">
+                            </div>
+                        </div>
+                        <img src="http://www.pokestadium.com/assets/img/sprites/official-art/snorlax.png" class="party-img">
+                    </a>
+                    <a href="#" class="party-box" style="background-color: #dae3f2;">
+                        <h1>Empty</h1>
+                    </a>
+                    <a href="#" class="party-box" style="background-color: #dae3f2;">
+                        <h1>Empty</h1>
+                    </a></li>
+                </ul>
+                </div>
             </div>
         </div>
         <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
