fixed links to map page

--- a/front-end-resources/pages/Map/map.html
+++ b/front-end-resources/pages/Map/map.html
@@ -41,7 +41,7 @@
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-globe"></i> Explore</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Last Map</a></li>
+                    <li><a href="./map.html">Last Map</a></li>
                     <li><a href="#">World Map</a></li>
                 </ul>
             </li>
