--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-globe"></i> Explore</a>
                 <ul class="dropdown-menu">
-                    <li><a class="top-menu" href="#">Last Map</a></li>
+                    <li><a class="top-menu" href="./front-end-resources/pages/Map/map.html">Last Map</a></li>
                     <li><a class="top-menu" href="#">World Map</a></li>
                 </ul>
             </li>
