--- a/front-end-resources/pages/Map/map.html
+++ b/front-end-resources/pages/Map/map.html
@@ -49,7 +49,7 @@
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-bullseye"></i> Battle</a>
                 <ul class="dropdown-menu">
-                    <li><a href="./gyms.html">Gym Leaders</a></li>
+                    <li><a href="../Gyms/gyms.html">Gym Leaders</a></li>
                     <li><a href="#">PvP Arena</a></li>
                     <li><a href="#">Raids Lobby</a></li>
                 </ul>
@@ -108,7 +108,7 @@
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-bullseye"></i> Battle</a>
                 <ul class="dropdown-menu">
-                    <li><a href="./gyms.html">Gym Leaders</a></li>
+                    <li><a href="../Gyms/gyms.html">Gym Leaders</a></li>
                     <li><a href="#">PvP Arena</a></li>
                     <li><a href="#">Raids Lobby</a></li>
                 </ul>
