--- a/front-end-resources/pages/Map/map.html
+++ b/front-end-resources/pages/Map/map.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- <script src="../../shared-resources/template.js"></script> -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=PT Sans' rel='stylesheet'>
@@ -41,14 +42,14 @@
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-globe"></i> Explore</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Last Map</a></li>
+                    <li><a href="./map.html">Last Map</a></li>
                     <li><a href="#">World Map</a></li>
                 </ul>
             </li>
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-bullseye"></i> Battle</a>
                 <ul class="dropdown-menu">
-                    <li><a href="./gyms.html">Gym Leaders</a></li>
+                    <li><a href="../Gyms/gyms.html">Gym Leaders</a></li>
                     <li><a href="#">PvP Arena</a></li>
                     <li><a href="#">Raids Lobby</a></li>
                 </ul>
@@ -100,14 +101,14 @@
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-globe"></i> Explore</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Last Map</a></li>
+                    <li><a href="./map.html">Last Map</a></li>
                     <li><a href="#">World Map</a></li>
                 </ul>
             </li>
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fas fa-bullseye"></i> Battle</a>
                 <ul class="dropdown-menu">
-                    <li><a href="./gyms.html">Gym Leaders</a></li>
+                    <li><a href="../Gyms/gyms.html">Gym Leaders</a></li>
                     <li><a href="#">PvP Arena</a></li>
                     <li><a href="#">Raids Lobby</a></li>
                 </ul>
@@ -233,10 +234,7 @@
         <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
             <div class="white-box centered">
                 <div class="header">Map</div>
-                <div class="map-container">
-                    <canvas id="map" width="512" height="448" style="border:1px solid #000000;">Canvas not supported on your browser</canvas>
-                    <img src="Images/Oak%20Village.png" style="border:1px solid #000000;">
-                </div>
+                <canvas id="map" width="512" height="448" style="border:1px solid #000000;">Canvas not supported on your browser</canvas>
             </div>
         </div>
     </div>
@@ -251,6 +249,6 @@
     
 </body>
 
-<script src="./Gameplay/index.js"></script>
+<script src="./Gameplay/map-generator.js"></script>
 
 </html>
