--- a/front-end-resources/pages/Map/map.html
+++ b/front-end-resources/pages/Map/map.html
@@ -234,7 +234,10 @@
         <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
             <div class="white-box centered">
                 <div class="header">Map</div>
-                <canvas id="map" width="512" height="448" style="border:1px solid #000000;">Canvas not supported on your browser</canvas>
+                <container>
+                    <canvas id="map" width="512" height="448" style="position: absolute;">Canvas not supported on your browser</canvas>
+                    <img src="./Images/OakVillageTop.png" width="512" height="448" style="position: relative;">
+                </container>
             </div>
         </div>
     </div>
